src/test/compile-fail/export-tag-variant.rs
// xfail-boot
// error-pattern: unresolved name

mod foo {
  export x;

  fn x() {
  }

  tag y {
    y1;
  }
}

fn main() {
  auto z = foo::y1;
}
